<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <fragment
        android:id="@+id/detailFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_backToMain"
        tools:layout_editor_absoluteX="152dp"
        app:navGraph="@navigation/detail_nav" />

    <TextView
        android:id="@+id/detail_stationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/placeholder_station_name"
        android:textAlignment="viewStart"
        android:textColor="@color/font_color_white"
        android:textColorHint="@color/font_color_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/detailFragment"
        app:layout_constraintStart_toEndOf="@+id/button_backToMain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        tools:ignore="MissingConstraints,SmallSp" />

    <ImageButton
        android:id="@+id/button_backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/secondary"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow"
        android:contentDescription="@string/button_backToMain" />

    <ImageView
        android:id="@+id/detail_imageCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/description_country_name"
        android:src="@drawable/ic_icon_country"
        app:layout_constraintBottom_toTopOf="@+id/detailFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />


</androidx.constraintlayout.widget.ConstraintLayout>
