<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:clickable="true"
    android:focusable="true"
    android:textAlignment="viewEnd">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/list_imageBackground"
            android:layout_width="394dp"
            android:layout_height="103dp"
            android:contentDescription="@string/description_list_item_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/list_item_bg"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/station_textBusNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/placeholder_station_buses"
            android:textAlignment="center"
            android:textColor="@color/font_color_white"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/station_textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/wendy_one"
            android:padding="4dp"
            android:text="@string/placeholder_station_name"
            android:textAlignment="viewStart"
            android:textColor="@color/font_color_white"
            android:textColorHint="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/station_textBusNumber"
            app:layout_constraintStart_toStartOf="@+id/station_textBusNumber"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.636"
            tools:ignore="MissingConstraints,SmallSp" />

        <ImageButton
            android:id="@+id/buttonDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/list_imageBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423"
            app:srcCompat="@drawable/list_button"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>